[project]
name = "langchain-opendma"
version = "0.2.0.dev1"
description = "LangChain document loaders for OpenDMA - integrate ECM systems with LangChain"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Stefan Kopf", email = "s.kopf@xaldon.de" }
]
requires-python = ">=3.10, <4"
dependencies = [
    "langchain-core>=1.0.0,<2.0.0",
    "opendma-api>=0.8.0",
    "opendma-remote>=0.8.0",
]
keywords = ["langchain", "opendma", "ecm", "document-loaders"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://opendma.org"
Repository = "https://github.com/OpenDMA/langchain-opendma.git"
Documentation = "https://github.com/OpenDMA/langchain-opendma/tree/main/docs"
Issues = "https://github.com/OpenDMA/langchain-opendma/issues"

[project.optional-dependencies]
unstructured = [
    "langchain-unstructured>=0.2.0",
    "unstructured-client>=0.28.0",
    "unstructured-inference>=1.2.0,<1.3.0; python_version < '3.11'",
    "unstructured-inference>=1.6.10; python_version >= '3.11' and python_version < '3.14'",
    "unstructured[pdf,doc,docx,ppt,pptx,xlsx,rtf,odt,epub,image,csv,tsv,md,org,rst]>=0.16.0",
]
docling = [
    "langchain-docling>=1.0.0",
]
all = [
    "langchain-opendma[unstructured]",
    "langchain-opendma[docling]",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=langchain_opendma --cov-report=term-missing --cov-report=html"
markers = [
    "integration: tests requiring an external OpenDMA tutorial repository",
]

[tool.coverage.run]
source = ["src/langchain_opendma"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
